# hr-system-review

./: .editorconfig  .env.example  .gitignore  AI_HANDOFF.md  CLOUD_DEPLOY.md  CONTRIBUTING.md  QUICK_START.md  README.md  START_HERE.md  USER_GUIDE.md  docker-compose.yml  package-lock.json  package.json  railway.json  render.yaml
backend/: .dockerignore  Dockerfile  Dockerfile.railway  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0862e5374be8_init_schema.py  71666f29944c_add_attachment_resume_task.py  8e5bd01fe8d0_add_company_position.py  c1d2_add_pgvector_tables.py  d3e4_add_pool_tables.py  e5f6_add_capability_aliases.py  f7g8_add_follow_up_status_change.py  h9i0_add_candidate_destination.py  j1k2_add_web_profile.py  k3l4_add_code_submission.py  l4m5_add_interview_selection_state.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  agent.py  auth.py  (+12 more)
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  attachment.py  candidate.py  code_submission.py  company.py  follow_up.py  pool.py  position.py  resume_task.py  tag.py  user.py
backend/app/schemas/: auth.py  candidate.py  code_submission.py  company.py  dashboard.py  follow_up.py  position.py  resume.py  user.py
backend/app/scripts/: batch_import.py  seed.py  seed_demo.py  test_matching.py
backend/app/services/: company_extract.py  embedding.py  exporter.py  matcher.py  position_capability.py  storage.py  vector_store.py  vectorize.py  web_enrichment.py
backend/tests/: test_interviewee_isolation.py
(+100 files in other folders)
